[package]
name = "marty-zkp"
version = "0.1.2"
edition = "2021"
description = "Bridge to Google Longfellow ZK (LibZK) for privacy-preserving proofs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ElevenID/marty-core"

[dependencies]
marty-types = { version = "0.1.2", path = "../marty-types" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
zeroize = "1.7"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69" # In a real scenario, we'd use this to generate bindings

[features]
default = []
python = ["dep:pyo3"]
# zk-mock: compile the C++ stub instead of the real Longfellow library.
# ONLY for local development and CI unit tests. Never enable in production.
# Building with --release while this feature is active is a hard compile error.
zk-mock = []

[dependencies.pyo3]
workspace = true
optional = true
